// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`cone closed 1`] = `
"v -1.7320508075688774 1 -0.9999999999999996
v -0.8660254037844387 0 -0.4999999999999998
v 0 0 1
v 0 1 2
v -1.7320508075688774 1 -0.9999999999999996
v 0 0 1
v 0 0 0
v 0 0 1
v -0.8660254037844387 0 -0.4999999999999998
v 0 1 0
v -1.7320508075688774 1 -0.9999999999999996
v 0 1 2
v 1.732050807568877 1 -1.0000000000000009
v 0.8660254037844385 0 -0.5000000000000004
v -0.8660254037844387 0 -0.4999999999999998
v -1.7320508075688774 1 -0.9999999999999996
v 1.732050807568877 1 -1.0000000000000009
v -0.8660254037844387 0 -0.4999999999999998
v 0 0 0
v -0.8660254037844387 0 -0.4999999999999998
v 0.8660254037844385 0 -0.5000000000000004
v 0 1 0
v 1.732050807568877 1 -1.0000000000000009
v -1.7320508075688774 1 -0.9999999999999996
v 4.898587196589413e-16 1 2
v 2.4492935982947064e-16 0 1
v 0.8660254037844385 0 -0.5000000000000004
v 1.732050807568877 1 -1.0000000000000009
v 4.898587196589413e-16 1 2
v 0.8660254037844385 0 -0.5000000000000004
v 0 0 0
v 0.8660254037844385 0 -0.5000000000000004
v 2.4492935982947064e-16 0 1
v 0 1 0
v 4.898587196589413e-16 1 2
v 1.732050807568877 1 -1.0000000000000009
vn -0.8660254037844388 0 -0.49999999999999983
vn -0.8660254037844388 0 -0.49999999999999983
vn 0 0 1
vn 0 0 1
vn -0.8660254037844388 0 -0.49999999999999983
vn 0 0 1
vn 0 -1 0
vn 0 -1 0
vn 0 -1 0
vn 0 1 0
vn 0 1 0
vn 0 1 0
vn 0.8660254037844385 0 -0.5000000000000004
vn 0.8660254037844385 0 -0.5000000000000004
vn -0.8660254037844388 0 -0.49999999999999983
vn -0.8660254037844388 0 -0.49999999999999983
vn 0.8660254037844385 0 -0.5000000000000004
vn -0.8660254037844388 0 -0.49999999999999983
vn 0 -1 0
vn 0 -1 0
vn 0 -1 0
vn 0 1 0
vn 0 1 0
vn 0 1 0
vn 2.4492935982947064e-16 0 1
vn 2.4492935982947064e-16 0 1
vn 0.8660254037844385 0 -0.5000000000000004
vn 0.8660254037844385 0 -0.5000000000000004
vn 2.4492935982947064e-16 0 1
vn 0.8660254037844385 0 -0.5000000000000004
vn 0 -1 0
vn 0 -1 0
vn 0 -1 0
vn 0 1 0
vn 0 1 0
vn 0 1 0
f 3//3 2//2 1//1
f 6//6 5//5 4//4
f 9//9 8//8 7//7
f 12//12 11//11 10//10
f 15//15 14//14 13//13
f 18//18 17//17 16//16
f 21//21 20//20 19//19
f 24//24 23//23 22//22
f 27//27 26//26 25//25
f 30//30 29//29 28//28
f 33//33 32//32 31//31
f 36//36 35//35 34//34
"
`;

exports[`cone open 1`] = `
"v -1.7320508075688774 1 -0.9999999999999996
v -0.8660254037844387 0 -0.4999999999999998
v 0 0 1
v 0 1 2
v -1.7320508075688774 1 -0.9999999999999996
v 0 0 1
v 1.732050807568877 1 -1.0000000000000009
v 0.8660254037844385 0 -0.5000000000000004
v -0.8660254037844387 0 -0.4999999999999998
v -1.7320508075688774 1 -0.9999999999999996
v 1.732050807568877 1 -1.0000000000000009
v -0.8660254037844387 0 -0.4999999999999998
v 4.898587196589413e-16 1 2
v 2.4492935982947064e-16 0 1
v 0.8660254037844385 0 -0.5000000000000004
v 1.732050807568877 1 -1.0000000000000009
v 4.898587196589413e-16 1 2
v 0.8660254037844385 0 -0.5000000000000004
vn -0.8660254037844388 0 -0.49999999999999983
vn -0.8660254037844388 0 -0.49999999999999983
vn 0 0 1
vn 0 0 1
vn -0.8660254037844388 0 -0.49999999999999983
vn 0 0 1
vn 0.8660254037844385 0 -0.5000000000000004
vn 0.8660254037844385 0 -0.5000000000000004
vn -0.8660254037844388 0 -0.49999999999999983
vn -0.8660254037844388 0 -0.49999999999999983
vn 0.8660254037844385 0 -0.5000000000000004
vn -0.8660254037844388 0 -0.49999999999999983
vn 2.4492935982947064e-16 0 1
vn 2.4492935982947064e-16 0 1
vn 0.8660254037844385 0 -0.5000000000000004
vn 0.8660254037844385 0 -0.5000000000000004
vn 2.4492935982947064e-16 0 1
vn 0.8660254037844385 0 -0.5000000000000004
f 3//3 2//2 1//1
f 6//6 5//5 4//4
f 9//9 8//8 7//7
f 12//12 11//11 10//10
f 15//15 14//14 13//13
f 18//18 17//17 16//16
"
`;

exports[`cone radiusEnd is zero & closed 1`] = `
"v 0 1 0
v -0.8660254037844387 0 -0.4999999999999998
v 0 0 1
v 0 0 0
v 0 0 1
v -0.8660254037844387 0 -0.4999999999999998
v 0 1 0
v 0.8660254037844385 0 -0.5000000000000004
v -0.8660254037844387 0 -0.4999999999999998
v 0 0 0
v -0.8660254037844387 0 -0.4999999999999998
v 0.8660254037844385 0 -0.5000000000000004
v 0 1 0
v 0 0 1
v 0.8660254037844385 0 -0.5000000000000004
v 0 0 0
v 0.8660254037844385 0 -0.5000000000000004
v 0 0 1
vn 0 1 0
vn -0.8660254037844388 0 -0.49999999999999983
vn 0 0 1
vn 0 -1 0
vn 0 -1 0
vn 0 -1 0
vn 0 1 0
vn 0.8660254037844385 0 -0.5000000000000004
vn -0.8660254037844388 0 -0.49999999999999983
vn 0 -1 0
vn 0 -1 0
vn 0 -1 0
vn 0 1 0
vn 0 0 1
vn 0.8660254037844385 0 -0.5000000000000004
vn 0 -1 0
vn 0 -1 0
vn 0 -1 0
f 3//3 2//2 1//1
f 6//6 5//5 4//4
f 9//9 8//8 7//7
f 12//12 11//11 10//10
f 15//15 14//14 13//13
f 18//18 17//17 16//16
"
`;

exports[`cone radiusEnd is zero & open 1`] = `
"v 0 1 0
v -0.8660254037844387 0 -0.4999999999999998
v 0 0 1
v 0 1 0
v 0.8660254037844385 0 -0.5000000000000004
v -0.8660254037844387 0 -0.4999999999999998
v 0 1 0
v 0 0 1
v 0.8660254037844385 0 -0.5000000000000004
vn 0 1 0
vn -0.8660254037844388 0 -0.49999999999999983
vn 0 0 1
vn 0 1 0
vn 0.8660254037844385 0 -0.5000000000000004
vn -0.8660254037844388 0 -0.49999999999999983
vn 0 1 0
vn 0 0 1
vn 0.8660254037844385 0 -0.5000000000000004
f 3//3 2//2 1//1
f 6//6 5//5 4//4
f 9//9 8//8 7//7
"
`;

exports[`cone radiusStart is zero & closed 1`] = `
"v 0 0 0
v 0 1 1
v -0.8660254037844387 1 -0.4999999999999998
v 0 1 0
v -0.8660254037844387 1 -0.4999999999999998
v 0 1 1
v 0 0 0
v -0.8660254037844387 1 -0.4999999999999998
v 0.8660254037844385 1 -0.5000000000000004
v 0 1 0
v 0.8660254037844385 1 -0.5000000000000004
v -0.8660254037844387 1 -0.4999999999999998
v 0 0 0
v 0.8660254037844385 1 -0.5000000000000004
v 0 1 1
v 0 1 0
v 0 1 1
v 0.8660254037844385 1 -0.5000000000000004
vn 0 -1 0
vn 0 0 1
vn -0.8660254037844388 0 -0.49999999999999983
vn 0 1 0
vn 0 1 0
vn 0 1 0
vn 0 -1 0
vn -0.8660254037844388 0 -0.49999999999999983
vn 0.8660254037844385 0 -0.5000000000000004
vn 0 1 0
vn 0 1 0
vn 0 1 0
vn 0 -1 0
vn 0.8660254037844385 0 -0.5000000000000004
vn 0 0 1
vn 0 1 0
vn 0 1 0
vn 0 1 0
f 3//3 2//2 1//1
f 6//6 5//5 4//4
f 9//9 8//8 7//7
f 12//12 11//11 10//10
f 15//15 14//14 13//13
f 18//18 17//17 16//16
"
`;

exports[`cone radiusStart is zero & open 1`] = `
"v 0 0 0
v 0 1 1
v -0.8660254037844387 1 -0.4999999999999998
v 0 0 0
v -0.8660254037844387 1 -0.4999999999999998
v 0.8660254037844385 1 -0.5000000000000004
v 0 0 0
v 0.8660254037844385 1 -0.5000000000000004
v 0 1 1
vn 0 -1 0
vn 0 0 1
vn -0.8660254037844388 0 -0.49999999999999983
vn 0 -1 0
vn -0.8660254037844388 0 -0.49999999999999983
vn 0.8660254037844385 0 -0.5000000000000004
vn 0 -1 0
vn 0.8660254037844385 0 -0.5000000000000004
vn 0 0 1
f 3//3 2//2 1//1
f 6//6 5//5 4//4
f 9//9 8//8 7//7
"
`;
